clusters/talos-ottawa/apps/media/app/tunarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tunarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tunarr
    spec:
      containers:
        - name: tunarr
          image: chrisbenincasa/tunarr:0.22.17
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /config
          resources:
            requests:
              gpu.intel.com/i915: "25"
            limits:
              gpu.intel.com/i915: "25"
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: tunarr-config
