clusters/talos-ottawa/apps/media/app/tunarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunarr
spec:
  selector:
    app: tunarr
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  type: ClusterIP
